[tool.poetry]
name = "winsnake"
version = "0.1.0"
description = ""
authors = ["rGallardoPD <rgallardo@polydata.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
